# cloud_sentinel_cli

./: README.md  pyproject.toml
.github/workflows/: ci.yml  cloudsentinel-scan.yml
sentinel/: __init__.py  cli.py
sentinel/modules/: cloud_run.py  etl_airflow.py  gcp_iam.py  gcp_storage.py
sentinel/utils/: __init__.py  alerts.py  output.py
tests/: __init__.py  test_gcp_iam.py
